@@ -139,6 +139,7 @@ class CTrigger extends CZBXAPI{
 
 			'filter'					=> null,
 			'search'					=> null,
+			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
 
