@@ -98,6 +98,7 @@ class CTriggerPrototype extends CZBXAPI{
 
 			'filter'					=> null,
 			'search'					=> null,
+			'searchByAny'			=> null,
 			'startSearch'				=> null,
 			'excludeSearch'				=> null,
 
