@@ -57,7 +57,8 @@ class CWebCheck extends CZBXAPI{
 // filter
 			'filter'				=> null,
 			'search'				=> null,
-			'startSearch'			=> null,
+			'searchByAny'			=> null,
+			'startSearch'				=> null,
 			'exludeSearch'			=> null,
 
 // OutPut
